overlay fix, fix to horizontal scroll

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,4 +1,7 @@
-h2 > a { 
+body {
+    overflow-x: hidden;
+}
+h2 > a {
 	text-decoration:none;
 	color:#3f67c0;
 }
@@ -56,11 +59,6 @@ h2 > a {
     margin: 4px;
     padding: 36px 12px 10px;
     background: linear-gradient(to top, rgba(50,50,93,0.78) 0%, rgba(50,50,93,0.2) 65%, transparent 100%);
-    opacity: 0;
-    transition: opacity 0.2s;
-}
-.grid-item:hover .gallery-overlay {
-    opacity: 1;
 }
 .overlay-title {
   color: #fff;
